care/force-app/main/default/objects/Platform_Servicing_Setting__mdt/Platform_Servicing_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration to store token across the org</description>
    <label>Platform Servicing Setting</label>
    <pluralLabel>Platform Servicing Setting</pluralLabel>
</CustomObject>