care/force-app/main/default/objects/Platform_Servicing_Setting__mdt/fields/Is_Staging__c.field-meta.xml
<CustomField>
    <fullName>Is_Staging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked the configuration runs for staging</description>
    <label>Is Staging</label>
    <type>Checkbox</type>
</CustomField>