care/force-app/main/default/objects/Platform_Servicing_Setting__mdt/fields/Production_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Production_Access_Token__c</fullName>
    <label>Production Access Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>