care/force-app/main/default/objects/Platform_Servicing_Setting__mdt/fields/Staging_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Staging_Access_Token__c</fullName>
    <label>Staging Access Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>